Use maven-jlink-plugin