@@ -52,46 +52,40 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>3.0.0</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jlink-plugin</artifactId>
+                <version>3.1.0</version>
+                <extensions>true</extensions>
                 <executions>
                     <execution>
                         <id>jlink</id>
                         <phase>package</phase>
                         <goals>
-                            <goal>exec</goal>
+                            <goal>jlink</goal>
                         </goals>
-                        <configuration>
-                            <executable>${java.home}/bin/jlink</executable>
-                            <arguments>
-                                <argument>--module-path</argument>
-                                <argument>${project.build.outputDirectory}</argument>
-                                <argument>--add-modules</argument>
-                                <argument>cfa</argument>
-                                <argument>--add-options</argument>
-                                <!--
-                                    add-option does not accept argument which stats with '\-\-',
-                                    so HeapDumpOnOutOfMemoryError is added to the top of args to avoid it.
-                                -->
-                                <argument>-XX:+HeapDumpOnOutOfMemoryError --add-exports=jdk.jdeps/com.sun.tools.classfile=cfa</argument>
-                                <argument>--launcher</argument>
-                                <argument>${project.artifactId}=cfa/com.yasuenag.cfa.Main</argument>
-                                <argument>--output</argument>
-                                <argument>${project.build.directory}/${imageName}</argument>
-                                <argument>--compress</argument>
-                                <argument>2</argument>
-                                <argument>--no-header-files</argument>
-                                <argument>--no-man-pages</argument>
-                            </arguments>
-                        </configuration>
                     </execution>
                 </executions>
+                <configuration>
+                    <classifier>${package.os.name}-${os.arch}</classifier>
+                    <modulePaths>
+                        <modulePath>${project.build.outputDirectory}</modulePath>
+                    </modulePaths>
+                    <addModules>
+                        <addModule>cfa</addModule>
+                    </addModules>
+                    <addOptions>
+                        <addOption>--add-exports=jdk.jdeps/com.sun.tools.classfile=cfa</addOption>
+                    </addOptions>
+                    <launcher>${project.artifactId}=cfa/com.yasuenag.cfa.Main</launcher>
+                    <compress>2</compress>
+                    <noHeaderFiles>true</noHeaderFiles>
+                    <noManPages>true</noManPages>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>3.3.0</version>
+                <version>3.6.0</version>
                 <configuration>
                     <descriptors>
                         <descriptor>src/main/assembly/distribution.xml</descriptor>
